add in menu item

--- a/background.html
+++ b/background.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<style>
-			.wrapper > div {
+			.wrapper div {
 				background:url("images/heading2.jpg") no-repeat;
 				width:250px;
 				height:76px;
@@ -16,7 +16,7 @@
 				I have added a class; I dislike assigning to elements directly.
 			</p>
 			<div> A div.</div>
-			<div>Another div</div>
+			
 		</div>		
 	</body>
 </html>
