--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <p>Main Index Page</p>
         
         <ul>
-            <li><a href="#">Put Links Here</a></li>
+            <li><a href="background.html">background using css</a></li>
         </ul>
     
 
